# 100-python-projects

./: .gitignore  README.md  lesson_list.txt  pyproject.toml
p01-band-name-generator/: main.py
p02-tip-calculator/: main.py
p03-treasure-island/: main.py
p04-rock-paper-scissors/: main.py
p05-password-generator/: main.py
p15-coffee-machine/: main.py
p16-oop-coffee-machine/: main.py
p17-quiz-game-start/: data.py  main.py  quiz_brain.py
p18-hirst-painting/: color_data.py  color_extractor.py  main.py
p19-etch-a-sketch/: main.py
p20-turtle-race/: main.py
p21-snake-game/: food.py  main.py  scoreboard.py  snake.py
p22-pong/: ball.py  main.py  paddles.py  scoreboard.py
p23-turtle-crossing/: car_manager.py  main.py  player.py  scoreboard.py
p24-mail-merge/: main.py
p24-mail-merge/Input/Letters/: starting_letter.txt
p24-mail-merge/Output/ReadyToSend/: letter_for_Aang.txt  letter_for_Appa.txt  letter_for_Katara.txt  letter_for_Momo.txt  letter_for_Sokka.txt  letter_for_Toph.txt  letter_for_Uncle Iroh.txt  letter_for_Zuko.txt
p25-us-states/: main.py
p26-nato-alphabet-builder/: main.py
p27-units-converter/: main.py
