[project]
name = "100-python-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorgram-py>=1.2.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241126",
    "pandas>=2.2.3",
    "ruff>=0.8.2",
]

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "colorgram"
]
ignore_missing_imports = true
